--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <img src="" alt="Starfleet">
+        <h1>Star Trek</h1>
                         <topnav> 
             <a href="#home">Home</a>
             <a href="#contact">Contact</a>
